# curver

./: .gitignore  README.md  curve_edit.py  curve_edit_list.py  curve_editor.py  curves.py  pyproject.toml  setup.py
curver/: __init__.py  add_curve_panel.py  curve_controler.py  curve_controller.py  curve_edit_list.py  curve_edit_window.py  curve_editor.py  curve_join_window.py  curves.py  main.py  utils.py
curver/curves/: __init__.py  base_curve.py  bezier.py  cubic_spline.py  curve.py  lagrange.py  polyline.py  rational_bezier.py  utils.py
curver/panels/: __init__.py  add_curve_panel.py  curve_edit_list_panel.py  curve_edit_panel.py  curve_join_panel.py
curver/ui/: add_point_panel.ui  add_point_panel_ui.py  curve_edit.ui  curve_edit_list.ui  curve_edit_list_ui.py  curve_edit_ui.py  curve_join.ui  curve_join_ui.py  main_ui.py  main_ui.ui
curver/widgets/: __init__.py  group_segment.py  interpolation_curve.py  item.py  line.py  point.py  scene.py  segment.py
docs/: python_logo.json
ui/: curve_edit.ui  curve_edit_ui.py  main_ui.py  main_ui.ui
widgets/: line.py  point.py  scene.py
