[tool.poetry]
name = "curver"
version = "0.1.0"
description = "Cure editor"
authors = ["Wojciech Pratkowiecki <wpratkowiecki@gmail.com>"]

[tool.poetry.scripts]
curver = "curver.main:main"

[tool.poetry.dependencies]
python = "^3.6"
PyQt5 = "^5.15.0"
daiquiri = "^2.1.1"
numpy = "^1.18.5"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
